@@ -47,6 +47,7 @@ advice from friends like these:
 
  Yang Tse, Daniel Fandrich, Jim Meyering, Christian Krause, Andreas Wurf,
  Markus Koetter, Josef Wolf, Vlad Grachov, Pawel Kierski, Igor Novoseltsev,
- Fred Machado, Ken Hirsch, Keshav Krity, Patrick Monnerat, Mark Karpeles
+ Fred Machado, Ken Hirsch, Keshav Krity, Patrick Monnerat, Mark Karpeles,
+ Anthony Bryan
 
         Thanks! (and sorry if I forgot to mention someone)
